[package]
name = "mabi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
gilrs = "0.10.8"
gy521-rppal = "0.1.1"
i2cdev = "0.6.1"
linux-embedded-hal = "0.4.0"
mpu6050 = "0.1.6"
pwm-pca9685 = "1.0.0"
rppal = { version = "0.19.0", features = ["hal"] }
serde = { version = "1.0.215", features = ["derive"] }
