[package]
name = "mabi-sensor"
version = "0.1.0"
authors = ["gbPagano <guilhermebpagano@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "mabi-sensor"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
mpu6050 = "0.1.6"
esp-idf-hal = "0.44.1"
embedded-hal = "1.0.0"
libm = "0.2.11"
anyhow = "1.0.93"
embedded-svc = "0.28.0"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3.3"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
